--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,16 +1,18 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <script src="../js/home.js"></script>
 </head>
 <body>
-<p th:text="'Hello, ' + ${name} + '!'" />
-
+<p text="'Hello, ' + ${name} + '!'" />
+<button onclick="htmlHello()">Click Me!</button>
 <script>
-    function hello()
+    function htmlHello()
     {
         console.log("Hello In JavaScript!");
+        hello();
 
     }
 
