--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,16 @@
 </head>
 <body>
 <p text="'Hello, ' + ${name} + '!'" />
+<br>
+<form action="testForm">
+    <input type="text", name="name">
+    <br>
+    <input type ="text", name="age">
+    <br>
+    <input type="submit", value="Click To Test!">
+
+</form>
+
 <button onclick="htmlHello()">Click Me!</button>
 <script>
     function htmlHello()
